keycloak/01-keycloak-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/part-of: iam
    istio-injection: enabled
